committing maven project changes

--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,10 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <version>4.21.0</version>
+    </dependency>
   </dependencies>
 </project>
